--- a/AndoridApp/app/src/main/res/layout/activity_home.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_home.xml
@@ -20,7 +20,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:itemTextColor="@color/blue"
-        app:itemIconTint="@color/orange"
+        app:itemIconTint="@color/violet"
         app:headerLayout="@layout/nav_header_home"
         app:menu="@menu/activity_home_drawer" />
 
