--- a/AndoridApp/app/src/main/res/drawable/buttondesign.xml
+++ b/AndoridApp/app/src/main/res/drawable/buttondesign.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/orange"/>
+            <solid android:color="@color/violet"/>
             <stroke android:color="#bfbfbf" android:width="2dp" />
             <corners android:radius="12dp" />
         </shape>
