--- a/AndoridApp/app/src/main/res/layout/activity_driver_register.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_driver_register.xml
@@ -10,21 +10,20 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
+        android:paddingTop="60dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
-        <TextView
-            android:id="@+id/textView2"
+
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/CarInfo" />
+            android:layout_height="match_parent"
+            android:src="@drawable/twm"/>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp">
+        android:layout_marginTop="50dp">
 
         <EditText
             android:id="@+id/car_ownername"
