--- a/AndoridApp/app/src/main/res/layout/activity_login.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.rania.itigraduationproject.Login"
-    android:background="@color/grey"
+    android:background="@color/white"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,16 +13,23 @@
         android:gravity="center"
         android:orientation="vertical"
         android:padding="16dp"
-        android:paddingTop="50dp"
+        android:paddingTop="80dp"
+        android:layout_marginTop="50dp"
         >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/twm"/>
+
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp">
             <EditText
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginBottom="11dp"
                 android:inputType="textEmailAddress"
                 android:hint="@string/prompt_email"
@@ -80,7 +87,7 @@
             android:layout_marginBottom="28dp"
             android:text="@string/hint_data"
             android:layout_marginTop="20dp"
-            android:textSize="18dp"
+            android:textSize="22dp"
             android:textColor="@color/cardview_dark_background"
             android:gravity="center"/>
 
