--- a/AndoridApp/app/src/main/res/layout/activity_past_trip_for_driver.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_past_trip_for_driver.xml
@@ -8,6 +8,9 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/pastTripToDriver"/>
+        android:id="@+id/pastTripToDriver"
+        android:fontFamily="cursive"
+        android:textSize="40dp"
+        android:textColor="@color/blue"/>
 
 </RelativeLayout>
