--- a/AndoridApp/app/src/main/res/layout/activity_profile.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_profile.xml
@@ -4,24 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserProfile"
-    android:background="@color/grey">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="20dp"/>
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/profile_image"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/email"
-        app:civ_border_color="@color/cardview_dark_background"
-        app:civ_border_width="3dp" />
+    tools:context=".UserProfile">
+
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,12 +14,31 @@
         android:rowCount="2"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="20dp"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/profile_image"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/email"
+            android:layout_marginTop="50dp"
+            app:civ_border_color="@color/cardview_dark_background"
+            app:civ_border_width="3dp" />
     <TextView
         android:id="@+id/userNameProf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name"
         android:textColor="@color/cardview_dark_background"
+        android:textSize="20dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="20dp"/>
 
@@ -50,12 +53,14 @@
         android:focusableInTouchMode="false"
         android:enabled="false"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp" />
+        android:paddingLeft="20dp"
+        android:layout_marginLeft="30dp"/>
     <TextView
         android:id="@+id/userEmailProf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/prompt_email"
+        android:textSize="20dp"
         android:textColor="@color/cardview_dark_background"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="20dp"/>
@@ -70,12 +75,14 @@
         android:enabled="false"
         android:focusableInTouchMode="false"
         android:inputType="none"
+        android:layout_marginLeft="30dp"
         android:editable="false" />
     <TextView
         android:id="@+id/phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/phone"
+        android:textSize="20dp"
         android:textColor="@color/cardview_dark_background"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="20dp"/>
@@ -90,14 +97,16 @@
         android:editable="false"
         android:enabled="false"
         android:clickable="false"
+        android:layout_marginLeft="20dp"
         android:focusableInTouchMode="false"
-        android:paddingLeft="20dp"/>
+        android:paddingLeft="30dp"/>
     <TextView
         android:textColor="@color/cardview_dark_background"
         android:id="@+id/nationalIdProf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textSize="20dp"
         android:text="@string/national_id"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="20dp"/>
@@ -112,8 +121,9 @@
         android:focusableInTouchMode="false"
         android:enabled="false"
         android:ems="10"
+        android:layout_marginLeft="20dp"
         android:inputType="none"
-        android:paddingLeft="20dp"
+        android:paddingLeft="30dp"
         />
     <TextView
         android:textColor="@color/cardview_dark_background"
@@ -121,6 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/gender"
+        android:textSize="20dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="20dp"/>
 
@@ -134,12 +145,14 @@
         android:enabled="false"
         android:clickable="false"
         android:focusableInTouchMode="false"
-        android:paddingLeft="20dp"/>
+        android:layout_marginLeft="20dp"
+        android:paddingLeft="30dp"/>
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/date"
+            android:textSize="20dp"
             android:textColor="@color/cardview_dark_background"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="20dp"/>
@@ -154,6 +167,7 @@
             android:enabled="false"
             android:clickable="false"
             android:focusableInTouchMode="false"
+            android:layout_marginLeft="30dp"
             android:paddingLeft="20dp"/>
 
     </GridLayout>
