--- a/AndoridApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_sign_up.xml
@@ -5,23 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.rania.itigraduationproject.SignUp"
-    android:background="@color/grey"
+    android:background="@color/white"
     >
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
+        android:paddingTop="60dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/twm"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="50dp"
+            >
 
             <EditText
                 android:id="@+id/input_name"
@@ -96,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="@string/national_id"
-                android:drawableLeft="@drawable/ic_action_name"/>
+                android:drawableLeft="@drawable/name"/>
         </android.support.design.widget.TextInputLayout>
         <!--BirthDate-->
         <android.support.design.widget.TextInputLayout
@@ -186,7 +190,8 @@
             android:layout_marginTop="24dp"
             android:background="@drawable/buttondesign"
             android:padding="12dp"
-            android:text="SignUp" />
+            android:text="@string/singup"
+            android:textColor="@color/white"/>
 
         <TextView android:id="@+id/link_login"
             android:layout_width="fill_parent"
@@ -194,8 +199,8 @@
             android:layout_marginBottom="24dp"
             android:text="@string/goLogin"
             android:gravity="center"
-            android:textSize="16dip"
-            android:textColor="@color/white"
+            android:textSize="22dp"
+            android:textColor="@color/cardview_dark_background"
             />
 
     </LinearLayout>
