--- a/AndoridApp/app/src/main/res/layout/activity_splash.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_splash.xml
@@ -10,23 +10,24 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="304dp"
+        android:layout_height="408dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="93dp"
-        android:text="@string/RideSharing"
-        android:textColor="@color/blue"
-        android:textSize="50dp" />
+        android:layout_marginTop="75dp"
+        android:background="@drawable/carlogo1" />
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="232dp"
+        android:layout_height="377dp"
         android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/carlogo"
-        android:layout_alignParentLeft="true" />
+        android:layout_marginTop="86dp"
+        android:fontFamily="@font/dancing_script"
+        android:text="@string/RideSharing"
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="80dp" />
 
 
 </RelativeLayout>
