--- a/AndoridApp/app/src/main/res/layout/activity_trip_search.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_trip_search.xml
@@ -63,8 +63,7 @@
             android:layout_y="143dp"
             android:background="@drawable/buttondesign"
             android:text="@string/Search"
-            android:textColor="@android:color/black"
-            android:textSize="20dp" />
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
