--- a/AndoridApp/app/src/main/res/layout/content_home.xml
+++ b/AndoridApp/app/src/main/res/layout/content_home.xml
@@ -18,6 +18,9 @@
         android:layout_marginTop="20dp"
         tools:layout_editor_absoluteX="163dp"
         tools:layout_editor_absoluteY="170dp"
+        android:textColor="@color/blue"
+        android:fontFamily="cursive"
+        android:textSize="40dp"
         android:layout_marginLeft="139dp"
         android:layout_alignParentLeft="true" />
     <TextView
@@ -37,7 +40,10 @@
         android:id="@+id/listViewtrip"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="50dp"
+        android:textColor="@color/blue"
+        android:fontFamily="cursive"
+        android:textSize="40dp">
 
     </ListView>
 
