--- a/AndoridApp/app/src/main/res/layout/content_home_driver.xml
+++ b/AndoridApp/app/src/main/res/layout/content_home_driver.xml
@@ -33,5 +33,11 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="119dp"
         android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="30dp"
+        android:layout_gravity="right"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:paddingLeft="6dip"
+        android:minHeight="?android:attr/listPreferredItemHeight"
         android:layout_alignParentLeft="true" />
 </RelativeLayout>
