--- a/AndoridApp/app/src/main/res/layout/content_view_reserved_users.xml
+++ b/AndoridApp/app/src/main/res/layout/content_view_reserved_users.xml
@@ -11,5 +11,8 @@
     <ListView
         android:id="@+id/listOfUsers"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:fontFamily="cursive"
+        android:textSize="40dp"
+        android:textColor="@color/blue"/>
 </RelativeLayout>
