--- a/AndoridApp/app/src/main/res/layout/list_layout.xml
+++ b/AndoridApp/app/src/main/res/layout/list_layout.xml
@@ -25,7 +25,7 @@
         android:layout_marginLeft="56dp"
         android:layout_marginStart="56dp"
         android:layout_marginTop="35dp"
-        android:src="@drawable/tripimage" />
+        android:src="@drawable/car" />
 
     <TextView
         android:id="@+id/trip_name"
@@ -36,7 +36,9 @@
         android:layout_marginStart="32dp"
         android:layout_toEndOf="@+id/Trip_photo"
         android:layout_toRightOf="@+id/Trip_photo"
-        android:text="TextView" />
+        android:text=""
+        android:textSize="22dp"
+        android:textColor="@color/blue"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
