--- a/AndoridApp/app/src/main/res/layout/nav_header_home_driver.xml
+++ b/AndoridApp/app/src/main/res/layout/nav_header_home_driver.xml
@@ -3,7 +3,7 @@
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="@dimen/nav_header_height"
-android:background="@color/orange"
+android:background="@color/violet"
 android:gravity="bottom"
 android:orientation="vertical"
 android:paddingBottom="@dimen/activity_vertical_margin"
@@ -18,7 +18,7 @@ android:theme="@style/ThemeOverlay.AppCompat.Dark">
     android:layout_height="100dp"
     android:src="@mipmap/ic_launcher"
     android:paddingTop="8dp"
-    app:civ_border_color="@color/blue"
+    app:civ_border_color="@color/white"
     app:civ_border_width="3dp"
     />
 
@@ -32,7 +32,7 @@ android:theme="@style/ThemeOverlay.AppCompat.Dark">
         android:layout_marginTop="1dp"
         android:paddingTop="8dp"
         android:text=""
-        android:textColor="@color/blue"
+        android:textColor="@color/white"
         android:textSize="25dp" />
     <TextView
         android:id="@+id/drivernametext"
