--- a/AndoridApp/app/src/main/res/layout/activity_trip_search.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_trip_search.xml
@@ -5,8 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="2"
+    android:background="@color/white"
     android:rowCount="2"
     tools:context=".TripSearch">
+
+
 
     <AbsoluteLayout
         android:layout_width="match_parent"
@@ -15,17 +18,19 @@
         android:columnCount="2"
         android:rowCount="2"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="70dp">
         <TextView
             android:id="@+id/editText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="50dp"
             android:layout_x="6dp"
             android:layout_y="28dp"
-            android:text="@string/from" />
+            android:text="@string/from"
+            android:textSize="22dp"/>
 
         <fragment
             android:id="@+id/location_autocomplete_fragment"
@@ -43,6 +48,7 @@
             android:layout_marginRight="10dp"
             android:layout_x="15dp"
             android:layout_y="82dp"
+            android:textSize="22dp"
             android:text="@string/to" />
 
         <fragment
