--- a/AndoridApp/app/src/main/res/layout/activity_driver_profile.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_driver_profile.xml
@@ -27,10 +27,10 @@
             android:layout_height="120dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/email"
-            app:civ_border_color="@color/blue"
+            android:src="@drawable/profilepic"
+            app:civ_border_color="@color/white"
             app:civ_border_width="3dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="30dp"/>
         <TextView
             android:id="@+id/driverNameProf"
@@ -40,7 +40,8 @@
             android:textColor="@color/cardview_dark_background"
             android:textSize="20dp"
             android:layout_marginRight="10dp"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"/>
 
         <EditText
             android:id="@+id/driverNameProfEdt"
