--- a/AndoridApp/app/src/main/res/layout/activity_profile.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_profile.xml
@@ -28,7 +28,7 @@
             android:layout_height="120dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/email"
+            android:src="@drawable/profilepic"
             android:layout_marginTop="50dp"
             app:civ_border_color="@color/cardview_dark_background"
             app:civ_border_width="3dp" />
