--- a/AndoridApp/app/src/main/res/layout/nav_header_home.xml
+++ b/AndoridApp/app/src/main/res/layout/nav_header_home.xml
@@ -15,9 +15,9 @@
         android:id="@+id/usernameheader"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/profilepic"
         android:paddingTop="8dp"
-        app:civ_border_color="@color/blue"
+        app:civ_border_color="@color/white"
         app:civ_border_width="3dp"
         />
 
@@ -31,7 +31,7 @@
         android:layout_marginTop="1dp"
         android:paddingTop="8dp"
         android:text=""
-        android:textColor="@color/blue"
+        android:textColor="@color/white"
         android:textSize="25dp" />
     <TextView
         android:id="@+id/drivernametext"
