--- a/AndoridApp/app/src/main/res/layout/nav_header_home_driver.xml
+++ b/AndoridApp/app/src/main/res/layout/nav_header_home_driver.xml
@@ -16,7 +16,7 @@ android:theme="@style/ThemeOverlay.AppCompat.Dark">
     android:id="@+id/imageView"
     android:layout_width="100dp"
     android:layout_height="100dp"
-    android:src="@mipmap/ic_launcher"
+    android:src="@drawable/profilepic"
     android:paddingTop="8dp"
     app:civ_border_color="@color/white"
     app:civ_border_width="3dp"
